<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/compact_vertical_margin"
  android:paddingLeft="@dimen/compact_horizontal_margin"
  android:paddingRight="@dimen/compact_horizontal_margin"
  android:paddingTop="@dimen/compact_vertical_margin"
  tools:context="com.eightmins.eightminutes.advocate.ReferActivity">

  <EditText
    android:id="@+id/name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:hint="@string/name_hint"
    android:ems="12"
    android:inputType="textPersonName"/>

  <EditText
    android:id="@+id/email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/name"
    android:layout_centerHorizontal="true"
    android:ems="12"
    android:hint="@string/email_hint"
    android:inputType="textEmailAddress"/>

  <EditText
    android:id="@+id/phone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/email"
    android:layout_centerHorizontal="true"
    android:ems="12"
    android:hint="@string/phone_hint"
    android:inputType="phone"/>

  <EditText
    android:id="@+id/address1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/phone"
    android:layout_centerHorizontal="true"
    android:ems="12"
    android:hint="@string/address1_hint"
    android:inputType="textPostalAddress"/>

  <EditText
    android:id="@+id/address2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/address1"
    android:layout_centerHorizontal="true"
    android:ems="12"
    android:hint="@string/address2_hint"
    android:inputType="textPostalAddress"/>

  <EditText
    android:id="@+id/locality"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/address2"
    android:layout_centerHorizontal="true"
    android:ems="12"
    android:hint="@string/locality_hint"
    android:inputType="textPostalAddress"/>

  <EditText
    android:id="@+id/pincode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/locality"
    android:layout_centerHorizontal="true"
    android:ems="12"
    android:hint="@string/pincode_hint"
    android:inputType="textPostalAddress"/>

  <EditText
    android:id="@+id/city"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/pincode"
    android:layout_centerHorizontal="true"
    android:ems="12"
    android:hint="@string/city_hint"
    android:inputType="textPostalAddress"/>

  <EditText
    android:id="@+id/average_bill"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/city"
    android:layout_centerHorizontal="true"
    android:ems="12"
    android:hint="@string/average_bill_hint"
    android:inputType="numberDecimal"/>

  <EditText
    android:id="@+id/notes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/average_bill"
    android:layout_centerHorizontal="true"
    android:ems="12"
    android:hint="@string/notes_hint"
    android:inputType="text"/>

  <LinearLayout
    style="?android:attr/buttonBarButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:orientation="horizontal">

    <Button
      android:id="@+id/refer"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/refer"/>
  </LinearLayout>

</RelativeLayout>
