<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.eightmins.eightminutes.advocate.ReferActivity">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <android.support.v7.widget.CardView
        android:id="@+id/name_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/name_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/organization_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary"
        android:layout_below="@id/name_card"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/organization_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/organization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/organization_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/email_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/organization_card"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/email_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/phone_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_card"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/phone_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/phone_placeholder"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/address1_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_card"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/address1_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address1_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/address2_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address1_card"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/address2_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address2_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/locality_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address2_card"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/locality_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/locality_placeholder"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/locality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/pincode_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locality_card"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/pincode_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/pincode_placeholder"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/city_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pincode_card"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/city_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/city_placeholder"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>


      <android.support.v7.widget.CardView
        android:id="@+id/average_bill_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/city_card"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/average_bill_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/average_bill_placeholder"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/average_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/notes_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/average_bill_card"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="6sp"
        app:cardCornerRadius="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/notes_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/notes_placeholder"
          app:errorEnabled="true"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

    </RelativeLayout>
  </ScrollView>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/refer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end|bottom"
    android:layout_margin="16dp"
    android:clickable="true"
    app:ico_size="48dp"
    app:ico_icon="gmd-person-add"
    app:borderWidth="0dp"
    app:layout_anchor="@+id/notes_card"
    app:layout_anchorGravity="bottom|end|right"
    app:pressedTranslationZ="12dp"
    app:tabGravity="fill"
    app:tabMode="scrollable"/>
</android.support.design.widget.CoordinatorLayout>
