<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.eightmins.eightminutes.login.SignUpActivity">

  <ScrollView
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <androidx.cardview.widget.CardView
        android:id="@+id/name_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6sp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/name_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/username_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_card"
        android:layout_margin="6sp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/username_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textVisiblePassword|textNoSuggestions"/>
        </com.google.android.material.textfield.TextInputLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/password_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_card"
        android:layout_margin="6sp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/password_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/confirm_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_card"
        android:layout_margin="6sp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/confirm_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/email_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_card"
        android:layout_margin="6sp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/email_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/phone_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_card"
        android:layout_margin="6sp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/phone_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_placeholder"
            android:imeOptions="actionDone"
            android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
      </androidx.cardview.widget.CardView>
    </RelativeLayout>
  </ScrollView>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/sign_up"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end|bottom"
    android:layout_margin="16dp"
    app:borderWidth="0dp"
    app:ico_color="@color/primary"
    app:ico_icon="gmd-person-add"
    app:ico_size="48dp"
    app:layout_anchor="@+id/phone_card"
    app:layout_anchorGravity="bottom|end|right"
    app:tabGravity="fill"
    app:tabMode="scrollable"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
